# analog-agents

./: .gitignore  .gitmodules  AGENTS.md  CNAME  README.md  index.html  pyproject.toml
checklists/: adc.yml  amplifier.yml  bandgap.yml  common.yml  comparator.yml  current-mirror.yml  differential.yml  folded_cascode.yml  ldo.yml  pll.yml
config/: effort.yml  reviewers.example.yml  servers.example.yml
docs/specs/: 2026-04-05-analog-team-design.md
hooks/: hooks.json  post-netlist-check.sh  post-sim.sh  post_sim_check.py  session-start  session-summary.sh
pre-sim-checklists/: amplifier.yml  common.yml  differential.yml  folded_cascode.yml
prompts/: designer-prompt.md
shared-references/: checklist-schema.md  cmfb.md  eda-modes.md  effort-contract.md  handoff-contracts.md  review-protocol.md  wiki-schema.md
skills/adc-analyzer/: SKILL.md
skills/analog-agents/: SKILL.md  architect-prompt.md  designer-prompt.md  librarian-prompt.md  verifier-prompt.md
skills/analog-audit/: SKILL.md
skills/analog-behavioral/: SKILL.md
skills/analog-decompose/: SKILL.md
skills/analog-design/: SKILL.md
skills/analog-evolve/: SKILL.md
skills/analog-explore/: SKILL.md
skills/analog-integrate/: SKILL.md
skills/analog-learn/: SKILL.md
skills/analog-netlist-crawl/: SKILL.md
skills/analog-pipeline/: SKILL.md
skills/analog-review/: SKILL.md
skills/analog-verify/: SKILL.md
skills/analog-wiki/: SKILL.md
tools/: evolve_engine.py  postlayout_filter.py  review_bridge.py  sanitize_snapshot.py  sanitizer.py  wiki_ops.py
wiki/: edges.jsonl  index.yml
(+16 files in other folders)
